[package]
name    = "pba-qualifier-exam"
version = "1.0.0"

# This exam will be graded by rust stable 1.68 using the 2021 edition.
# Solutions may not require newer editions or versions including nightly.
rust-version = "1.68"
edition      = "2021"

# Solutions must not be shared!
publish = false

[dependencies]
# There should be NO external additions here, per the honor code.
# If you want or need to create a local dependency, you may do so.